--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
+    <section class="clients">
+        <div class="container">
+            <h2 class="title">Clients</h2>
+            <div class="clients_icons">
+            <ul class="clients_list">
+                <li class="clents_list_item"><a href="#" rel="nofollow"></a></li>
+                <li class="clents_list_item"><a href="#" rel="nofollow"></a></li>
+                <li class="clents_list_item"><a href="#" rel="nofollow"></a></li>
+                <li class="clents_list_item"><a href="#" rel="nofollow"></a></li>
+                <li class="clents_list_item"><a href="#" rel="nofollow"></a></li>
+            </ul>
+        </div>
+        </div>
+    </section>
     
 </body>
 </html>
