--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
-    
+    <section class="latest_works">
+        <div class="title">
+            <h2>Latest Works</h2>
+        </div>
+        <div class="grid_wrap">
+            <div class="pic">
+                <img src="assets/images/1.png" alt="">
+            </div>
+            <div class="pic">
+                <img src="assets/images/2.png" alt="">
+            </div>
+            <div class="pic">
+                <img src="assets/images/3.png" alt="">
+            </div>
+            <div class="pic">
+                <img src="assets/images/4.png" alt="">
+            </div>
+            <div class="pic">
+                <img src="assets/images/5.png" alt="">
+            </div>
+            <div class="pic">
+                <img src="assets/images/6.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
