--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <section class="clients">
-        <div class="container">
-            <h2 class="title">Clients</h2>
+        <div class="container clients_container">
+            <h2 class="clients_title">Clients</h2>
             <div class="clients_icons">
             <ul class="clients_list">
                 <li class="clents_list_item"><a href="#" rel="nofollow"><img src="assets/images/microsoft.png" alt="Icon Microsoft"></a></li>
