--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/style.min.css">
+    <link rel="stylesheet" href="assets/css/symu_info.min.css">
 </head>
 <body>
-    
+   <div class="container">
+       <div class="container__logo">
+           <img src="assets/images/symu_logo.png" alt="">
+           <div class="container__text">
+               <h1>Thanks for downloading our template!</h1>
+               <span>Hope that you enjoy it well! Check also our site</span>
+               <button class="btn">
+                   <a href="#">www.symu.con</a>
+               </button>
+           </div>
+       </div>
+   </div>
 </body>
 </html>
