add hamburger menu

--- a/index.html
+++ b/index.html
@@ -6,8 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.min.css">
+    <link rel="stylesheet" href="assets/css/hamburger.scss">
+    <link rel="stylesheet" href="assets/css/hamburger_menu.min.css">
 </head>
 <body>
+
+    <div id="mobile_menu_wrap">
+        <div id="sidemenu_top">
+            <button class="hamburger hamburger--slider" type="button">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
+        </div>
+        <nav class="sidemenu">
+            <ul>
+                <li><a href="index.html#about_me">About Me</a></li>
+                <li><a href="index.html#services">Services</a></li>
+                <li><a href="index.html#my_works">My Works</a></li>
+                <li><a href="index.html#clients">Clients</a></li>
+            </ul>
+        </nav>
+        <div class="sidemenu_links">
+            <ul>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+            </ul>
+        </div>
+    </div>
     
 </body>
 </html>
