--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
    <div class="container">
-       <div class="container__logo">
+       <div class="container_logo">
+           <div class="circle">
            <img src="assets/images/symu_logo.png" alt="">
-           <div class="container__text">
+        </div>
+           <div class="container_text">
                <h1>Thanks for downloading our template!</h1>
                <span>Hope that you enjoy it well! Check also our site</span>
                <button class="btn">
