--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <h2 class="clients_title">Clients</h2>
             <div class="clients_icons">
             <ul class="clients_list">
-                <li class="clents_list_item"><a href="#" rel="nofollow"><img src="assets/images/microsoft.png" alt="Icon Microsoft"></a></li>
-                <li class="clents_list_item"><a href="#" rel="nofollow"><img src="assets/images/samsung.png" alt="Icon Samsung"></a></li>
-                <li class="clents_list_item"><a href="#" rel="nofollow"><img src="assets/images/ibm.png" alt="Icon ibm"></a></li>
-                <li class="clents_list_item"><a href="#" rel="nofollow"><img src="assets/images/google.png" alt="Icon google"></a></li>                
+                <li class="clients_list_item"><a href="#" rel="nofollow"><img src="assets/images/microsoft.png" alt="Icon Microsoft"></a></li>
+                <li class="clients_list_item"><a href="#" rel="nofollow"><img src="assets/images/samsung.png" alt="Icon Samsung"></a></li>
+                <li class="clients_list_item"><a href="#" rel="nofollow"><img src="assets/images/ibm.png" alt="Icon ibm"></a></li>
+                <li class="clients_list_item"><a href="#" rel="nofollow"><img src="assets/images/google.png" alt="Icon google"></a></li>                
             </ul>
         </div>
         </div>
