update files on practice hire

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,36 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
+
 <body>
-    
+
+    <section class="hire">
+        <div class="hire__wrapper">
+            <div class="hire__me">
+                <div class="hire__container">
+                    <form class="hire__form" action="#" method="get">
+                        <div>
+                            <input class="hire__name hire__field" type="text" name="registration_name" id="name"
+                                placeholder="Your Name">
+                        </div>
+                        <div>
+                            <input class="hire__mail hire__field" type="email" name="registration" id="email_hire"
+                                placeholder="Your E-Mail">
+                        </div>
+                        <div>
+                            <textarea class="hire__message hire__field" name="Final_information" id="message" cols="30"
+                                rows="10" placeholder="Your message">Your Message
+                            </textarea>
+                        </div>
+                        <div class="hire__button">
+                            <button class="btn btn-blue" type="submit">SEND MESSAGE</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
