--- a/index.html
+++ b/index.html
@@ -13,49 +13,52 @@
 </head>
 
 <body>
-    <div class="regform">
-        <h3 class="regform__title">Register here</h3>
-        <form action="#" method="post" class="rg-form">
-            <div class="rg-form__item">
-                <input class="rg-form__input" type="text" name="email" id="reg-email" placeholder="Your email" required>
-                <label for="reg-email" class="rg-form__label">Your email</label>
-            </div>
-            <div class="rg-form__item">
-                <input class="rg-form__input" type="password" name="password" id="reg-pass" placeholder="Your password"
-                    required>
-                <label for="reg-pass" class="rg-form__label">Your password</label>
-            </div>
-            <div class="rg-form__item">
-                <input class="rg-form__input" type="password" name="password" id="reg-pass-r"
-                    placeholder="Repeat your password" required>
-                <label for="reg-pass-r" class="rg-form__label">Repeat your password</label>
-            </div>
-            <button class="rg-form__btn" type="submit">Sign up</button>
-            <div class="rg-form__sign">Or sign up with</div>
-            <div class="rg-form__link-wrap">
-                <a class="rg-form__link" href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                        viewBox="0 0 408.788 408.788" style="enable-background:new 0 0 408.788 408.788;"
-                        xml:space="preserve">
-                        <path style="fill:#475993;" d="M353.701,0H55.087C24.665,0,0.002,24.662,0.002,55.085v298.616c0,30.423,24.662,55.085,55.085,55.085
+    <div class="modal-reg-over" id="modal-reg">
+        <div class="regform">
+            <h3 class="regform__title">Register here</h3>
+            <form action="#" method="post" class="rg-form">
+                <div class="rg-form__item">
+                    <input class="rg-form__input" type="text" name="email" id="reg-email" placeholder="Your email"
+                        required>
+                    <label for="reg-email" class="rg-form__label">Your email</label>
+                </div>
+                <div class="rg-form__item">
+                    <input class="rg-form__input" type="password" name="password" id="reg-pass"
+                        placeholder="Your password" required>
+                    <label for="reg-pass" class="rg-form__label">Your password</label>
+                </div>
+                <div class="rg-form__item">
+                    <input class="rg-form__input" type="password" name="password" id="reg-pass-r"
+                        placeholder="Repeat your password" required>
+                    <label for="reg-pass-r" class="rg-form__label">Repeat your password</label>
+                </div>
+                <button class="rg-form__btn" type="submit">Sign up</button>
+                <div class="rg-form__sign">Or sign up with</div>
+                <div class="rg-form__link-wrap">
+                    <a class="rg-form__link" href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            viewBox="0 0 408.788 408.788" style="enable-background:new 0 0 408.788 408.788;"
+                            xml:space="preserve">
+                            <path style="fill:#475993;" d="M353.701,0H55.087C24.665,0,0.002,24.662,0.002,55.085v298.616c0,30.423,24.662,55.085,55.085,55.085
                h147.275l0.251-146.078h-37.951c-4.932,0-8.935-3.988-8.954-8.92l-0.182-47.087c-0.019-4.959,3.996-8.989,8.955-8.989h37.882
                v-45.498c0-52.8,32.247-81.55,79.348-81.55h38.65c4.945,0,8.955,4.009,8.955,8.955v39.704c0,4.944-4.007,8.952-8.95,8.955
                l-23.719,0.011c-25.615,0-30.575,12.172-30.575,30.035v39.389h56.285c5.363,0,9.524,4.683,8.892,10.009l-5.581,47.087
                c-0.534,4.506-4.355,7.901-8.892,7.901h-50.453l-0.251,146.078h87.631c30.422,0,55.084-24.662,55.084-55.084V55.085
                C408.786,24.662,384.124,0,353.701,0z" />
-                    </svg>
-                </a>
-                <a class="rg-form__link" href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" aria-label="Google" role="img" viewBox="0 0 512 512">
-                        <rect width="512" height="512" rx="15%" fill="#fff" />
-                        <path fill="#4285f4" d="M386 400c45-42 65-112 53-179H260v74h102c-4 24-18 44-38 57z" />
-                        <path fill="#34a853" d="M90 341a192 192 0 0 0 296 59l-62-48c-53 35-141 22-171-60z" />
-                        <path fill="#fbbc02" d="M153 292c-8-25-8-48 0-73l-63-49c-23 46-30 111 0 171z" />
-                        <path fill="#ea4335" d="M153 219c22-69 116-109 179-50l55-54c-78-75-230-72-297 55z" />
-                    </svg>
-                </a>
-            </div>
-        </form>
+                        </svg>
+                    </a>
+                    <a class="rg-form__link" href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" aria-label="Google" role="img" viewBox="0 0 512 512">
+                            <rect width="512" height="512" rx="15%" fill="#fff" />
+                            <path fill="#4285f4" d="M386 400c45-42 65-112 53-179H260v74h102c-4 24-18 44-38 57z" />
+                            <path fill="#34a853" d="M90 341a192 192 0 0 0 296 59l-62-48c-53 35-141 22-171-60z" />
+                            <path fill="#fbbc02" d="M153 292c-8-25-8-48 0-73l-63-49c-23 46-30 111 0 171z" />
+                            <path fill="#ea4335" d="M153 219c22-69 116-109 179-50l55-54c-78-75-230-72-297 55z" />
+                        </svg>
+                    </a>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 
