add files to hire_me

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
 <body>
 
-    <section class="hire">
+    <section class="hire overlay-form">
         <div class="hire__wrapper">
+            <div class="hire__close-btn close-btn">&times;</div>
             <div class="hire__me">
                 <div class="hire__container">
+                    <h2 class="hire__title">Hire Me</h2>
                     <form class="hire__form" action="#" method="get">
                         <div>
                             <input class="hire__name hire__field" type="text" name="registration_name" id="name"
@@ -40,6 +42,7 @@
             </div>
         </div>
     </section>
+    <div class="page-overlay"></div>
 
 </body>
 
