--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                         placeholder="Repeat your password" required>
                     <label for="reg-pass-r" class="rg-form__label">Repeat your password</label>
                 </div>
-                <button class="rg-form__btn" type="submit">Sign up</button>
+                <div class="reg-btn">
+                    <button class="rg-form__btn" type="submit">Sign up</button>
+                </div>
                 <div class="rg-form__sign">Or sign up with</div>
                 <div class="rg-form__link-wrap">
                     <a class="rg-form__link" href="#">
