--- a/index.html
+++ b/index.html
@@ -11,19 +11,12 @@
     <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
-   <div class="container">
-       <div class="container_logo">
-           <div class="circle">
-           <img src="assets/images/symu_logo.png" alt="">
-        </div>
-           <div class="container_text">
-               <h1>Thanks for downloading our template!</h1>
-               <span>Hope that you enjoy it well! Check also our site</span>
-               <button class="btn">
-                   <a href="#">www.symu.con</a>
-               </button>
-           </div>
-       </div>
-   </div>
+    <div id="cookie_block">
+        <p>This site uses cookies, so that my service can work better.</p>
+        <button type="button" class="btn btn-white btn-small" id="close_cookies">Accept</button>
+    </div>
+
+
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
