--- a/index.html
+++ b/index.html
@@ -8,20 +8,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.min.css">
+    <link rel="stylesheet" href="assets/css/symu_info.min.css">
 </head>
 <body>
    <div class="container">
+    <div class="circle">
+        <img src="assets/images/symu_logo.png" alt="">
+         </div>
        <div class="container_logo">
-           <div class="circle">
-           <img src="assets/images/symu_logo.png" alt="">
-        </div>
+            <a class="btn" href="#">www.symu.co</a>
            <div class="container_text">
                <h1>Thanks for downloading our template!</h1>
-               <span>Hope that you enjoy it well! Check also our site</span>
-               <button class="btn">
-                   <a href="#">www.symu.con</a>
-               </button>
+               <span>Hope that you enjoy it well! Check also our site</span>          
            </div>
        </div>
    </div>
