--- a/index.html
+++ b/index.html
@@ -11,6 +11,118 @@
     <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
-    
+    <section class="expert">
+        <div class="container">
+            <div class="expert__title title">
+                <h1 class="title__text">
+                    Expert In
+                </h1>
+            </div>
+            <div class="expert__grid">
+                <div class="expert__grid-item">
+                    <a href="#">
+                        <div class="expert__grid-colums">
+                            <div class="expert__grid-icon"> 
+                                <img src="assets/img/expert-1.png" alt="">
+                            </div>
+                            <div class="expert__grid-title">
+                                <h2>
+                                    Mobile App Desing
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut enim ad minim 
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="expert__grid-item">
+                    <a href="#">
+                        <div class="expert__grid-colums">
+                            <div class="expert__grid-icon"> 
+                                <img src="assets/img/expert-2.png" alt="">
+                            </div>
+                            <div class="expert__grid-title">
+                                <h2>
+                                    Mobile App Desing
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="expert__grid-item">
+                    <a href="#">
+                        <div class="expert__grid-colums">
+                            <div class="expert__grid-icon"> 
+                                <img src="assets/img/expert-3.png" alt="">
+                            </div>
+                            <div class="expert__grid-title">
+                                <h2>
+                                    Mobile App Desing
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut enim ad minim 
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="expert__grid-item">
+                    <a href="#">
+                        <div class="expert__grid-colums">
+                            <div class="expert__grid-icon"> 
+                                <img src="assets/img/expert-4.png" alt="">
+                            </div>
+                            <div class="expert__grid-title">
+                                <h2>
+                                    Mobile App Desing
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut enim ad minim  
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="expert__grid-item">
+                    <a href="#">
+                        <div class="expert__grid-colums">
+                            <div class="expert__grid-icon"> 
+                                <img src="assets/img/expert-5.png" alt="">
+                            </div>
+                            <div class="expert__grid-title">
+                                <h2>
+                                    Mobile App Desing
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="expert__grid-item">
+                    <a href="#">
+                        <div class="expert__grid-colums">
+                            <div class="expert__grid-icon"> 
+                                <img src="assets/img/expert-6.png" alt="">
+                            </div>
+                            <div class="expert__grid-title">
+                                <h2>
+                                    Mobile App Desing
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut enim ad minim 
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
