--- a/index.html
+++ b/index.html
@@ -14,11 +14,29 @@
 </head>
 
 <body>
+
+
+    <div class="about_me">
+        <div class="container">
+        <h2 class="about_me__h2">About Me</h2>
+        <p class="about_me__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span>nostrud exercitation
+                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                voluptate velit</span>
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+            qui officia </p>
+    </div>
+</div>
+
     <footer class="footer">
+    
         <div class="footer_p"><p>Need a graphic designer? <span>Ready to work!</span> </p></div>
       <div class="about_me_btn_wrapper"><button type="button" class="about_me_btn">Hire me</button></div> 
   
     </footer>
+
+
+    
 
 </body>
 
